HelloUltraviolet/Fixtures/RejectedSource/Statements/LetRefutablePattern/Expected.uv
//! Expected diagnostic metadata for the LetRefutablePattern rejected-source specimen.

expectedDiagnostic("", "rule.18.Let-Refutable-Pattern-Err")
